--- a/package.json
+++ b/package.json
@@ -9,13 +9,9 @@
     "chai": "^1.9.2",
     "gulp": "^3.8.8",
     "gulp-istanbul": "^0.3.1",
-    "gulp-jsdoc-to-markdown": "^0.1.5",
     "gulp-jshint": "^1.8.5",
     "gulp-mocha": "^1.1.1",
-    "gulp-rename": "^1.2.0",
-    "install": "^0.1.7",
-    "jshint-stylish": "^1.0.0",
-    "npm": "^2.1.3"
+    "jshint-stylish": "^1.0.0"
   },
   "engines": {
     "node": ">=0.10.3"
